tests/snapshots/integration__integration_tests__help__help_remove.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: wt remove [OPTIONS] [WORKTREES]...

Arguments:
  [WORKTREES]...
          Worktree or branch (@ for current)

Options:
      --no-delete-branch
          Keep branch after removal

  -D, --force-delete
          Delete unmerged branches

      --no-background
          Run removal in foreground

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

[32mOperation[0m

Removes worktree directory, git metadata, and branch. Requires clean working tree.

### No arguments (remove current)

- Removes current worktree and switches to main worktree
- In main worktree: switches to default branch

### By name (remove specific)

- Removes specified worktree(s) and branches
- Current worktree removed last (switches to main first)

### Background removal (default)

- Returns immediately for continued work
- Logs: [2m.git/wt-logs/{branch}-remove.log[0m
- Use [2m--no-background[0m for foreground (blocking)

### Cleanup

Stops any git fsmonitor daemon for the worktree before removal. This prevents orphaned processes when using builtin fsmonitor ([2mcore.fsmonitor=true[0m). No effect on Watchman users.

[32mExamples[0m

Remove current worktree and branch:

  [2mwt remove[0m

Remove specific worktree and branch:

  [2mwt remove feature-branch[0m

Remove worktree but keep branch:

  [2mwt remove --no-delete-branch feature-branch[0m

Remove multiple worktrees:

  [2mwt remove old-feature another-branch[0m

Remove in foreground (blocking):

  [2mwt remove --no-background feature-branch[0m

Switch to default in main:

  [2mwt remove  # (when already in main worktree)[0m
