tests/snapshots/integration__integration_tests__help__help_remove_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: wt remove [OPTIONS] [WORKTREES]...

Arguments:
  [WORKTREES]...  Worktree or branch (@ for current)

Options:
      --no-delete-branch  Keep branch after removal
  -D, --force-delete      Delete unmerged branches
      --no-background     Run removal in foreground
  -h, --help              Print help (see more with '--help')

Global Options:
  -C <path>            Working directory for this command
      --config <path>  User config file path
  -v, --verbose        Show commands and debug info
