tests/snapshots/integration__integration_tests__help__help_switch_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - switch
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt switch - Switch to a worktree
Usage: wt switch [OPTIONS] <BRANCH>

Arguments:
  <BRANCH>
          Branch, path, '@' (HEAD), '-' (previous), or '^' (main)

Options:
  -c, --create
          Create a new branch

  -b, --base <BASE>
          Base branch
          
          Defaults to default branch.

  -x, --execute <EXECUTE>
          Command to run after switch

  -f, --force
          Skip approval prompts

      --no-verify
          Skip all project hooks

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

[32mOperation[0m

### Switching to Existing Worktree

- If worktree exists for branch, changes directory via shell integration
- No hooks run
- No branch creation

### Creating New Worktree ([2m--create[0m)

1. Creates new branch (defaults to current default branch as base)
2. Creates worktree in configured location (default: [2m../{{ main_worktree }}.{{ branch }}[0m)
3. Runs post-create hooks sequentially (blocking)
4. Shows success message
5. Spawns post-start hooks in background (non-blocking)
6. Changes directory to new worktree via shell integration

[32mHooks[0m

### post-create (sequential, blocking)

- Run after worktree creation, before success message
- Typically: [2mnpm install[0m, [2mcargo build[0m, setup tasks
- Failures block the operation
- Skip with [2m--no-verify[0m

### post-start (parallel, background)

- Spawned after success message shown
- Typically: dev servers, file watchers, editors
- Run in background, failures logged but don't block
- Logs: [2m.git/wt-logs/{branch}-post-start-{name}.log[0m
- Skip with [2m--no-verify[0m

[1mTemplate variables:[0m [2m{{ repo }}[0m, [2m{{ branch }}[0m, [2m{{ worktree }}[0m, [2m{{ repo_root }}[0m

[1mSecurity:[0m Commands from project hooks require approval on first run.
Approvals are saved to user config. Use [2m--force[0m to bypass prompts.
See [2mwt config approvals --help[0m.

[32mExamples[0m

Switch to existing worktree:

  [2mwt switch feature-branch[0m

Create new worktree from main:

  [2mwt switch --create new-feature[0m

Switch to previous worktree:

  [2mwt switch -[0m

Create from specific base:

  [2mwt switch --create hotfix --base production[0m

Create and run command:

  [2mwt switch --create docs --execute "code ."[0m

Skip hooks during creation:

  [2mwt switch --create temp --no-verify[0m

[32mShortcuts[0m

Use [2m@[0m for current HEAD, [2m-[0m for previous, [2m^[0m for main:

  [2mwt switch @                              # Switch to current branch's worktree[0m
  [2mwt switch -                              # Switch to previous worktree[0m
  [2mwt switch --create new-feature --base=^  # Branch from main (default)[0m
  [2mwt switch --create bugfix --base=@       # Branch from current HEAD[0m
  [2mwt remove @                              # Remove current worktree[0m
