tests/snapshots/integration__integration_tests__help__help_switch_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - switch
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt switch - Switch to a worktree
Usage: wt switch [OPTIONS] <BRANCH>

Arguments:
  <BRANCH>  Branch, path, '@' (HEAD), '-' (previous), or '^' (main)

Options:
  -c, --create             Create a new branch
  -b, --base <BASE>        Base branch
  -x, --execute <EXECUTE>  Command to run after switch
  -f, --force              Skip approval prompts
      --no-verify          Skip all project hooks
  -h, --help               Print help (see more with '--help')

Global Options:
  -C <path>            Working directory for this command
      --config <path>  User config file path
  -v, --verbose        Show commands and debug info
